# minecraft-schematic-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  azure.ipynb  block_state_mapping.json  conda.yaml  convert.py  data.ipynb  extract_samples.ipynb  inference.ipynb  inference.py  main.ipynb  main.py  pyproject.toml  requirements.txt  sample.py  sample_test.ipynb  schematicnamer.py  test.ipynb  test.py  test2.py  test4.py  train.py  training.ipynb  training.py
.github/: CODEOWNERS
app/: main.py
common/: constants.py  file_paths.py
converter/: __init__.py  converter.py  mapping.py  test.py
data_preparer/: __init__.py  loader.py
data_sampler/: __init__.py  interested_blocks.json  world_sampler.py
model/: __init__.py  data_preparer.py  dataset.py  diffusion.py  discriminator.py  generator.py  loss.py  memorization_layer.py  model.py  model1.py  model_main.py  train.py  transformer_model.py  vae.py
modules/: __init__.py  data_module.py  embedding_visualization_callback.py  generate_schematic_callback.py  lightning_model.py  transformer_lightning_module.py  vae_lightning_module.py
notebooks/: data.ipynb  inference.ipynb
schematic_generator/: configs.py  generator.py  shape.py
schematic_image_converter/: converter.py  createshape.py  mapping.py  test.py  test2.py
schematic_viewer/: package-lock.json  package.json  server.js
scripts/: add_dataset_transformations.py  analyze_schematics.py  dev_server.py  learning_rate_changer.py  main.py  prepare_data.py  run_benchmark.py  sample.py  sample_schematics.py  test.py  train.py  train_diamond.py  (+2 more)
(+166 files in other folders)
