[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minecraft_schematic_generator"
version = "0.1.0"
description = "ML model for generating Minecraft schematics"
requires-python = ">=3.8"
dependencies = [
    "lightning",
    "schempy",
    "h5py",
    "tqdm",
    "amulet-core",
    "matplotlib",
    "huggingface-hub",
    "safetensors",
    "fastapi",
    "pydantic"
]

[project.optional-dependencies]
server = [
    "hypercorn"
]
dev = [
    "hypercorn",
    "wandb",
    "ipykernel",
    "tensorboard",
    "ruff",
    "pre-commit"
]

[tool.hatch.build.targets.wheel]
packages = ["src/minecraft_schematic_generator"]